fix(NoteCard): prevent NoteCard css spilling into other Card components

--- a/src/components/NoteCard/NoteCard.scss
+++ b/src/components/NoteCard/NoteCard.scss
@@ -1,4 +1,4 @@
-.card.card-noimage {
+.note.card.card-noimage {
 	align-items: start;
 	justify-content: flex-start;
 
